<resources>
    <string name="app_name">App14</string>
    <string name="title">OkHttp Client</string>
    <string name="getRequest">Make Http GET Request</string>
    <string name="postRequest">Make Http POST Request</string>
    <string name="signinTitle">Sign In</string>
    <string name="username">Mobile</string>
    <string name="password">Password</string>
    <string name="signinBtn">SignIn</string>
    <string name="homeTitle">Home</string>
    <string name="name">Name :</string>
    <string name="mobile">Mobile :</string>
    <string name="city">City :</string>
    <string name="pwd">Password :</string>
</resources>